Fixed bootstrap dropdown button alignment: used justify-content: center; on flexbox parent

--- a/flasksite/static/NHLmain.css
+++ b/flasksite/static/NHLmain.css
@@ -193,6 +193,7 @@ hr {
   align-items: center;
   display: flex;
   text-align: center;
+  justify-content: center;
 }
 
 .site-header .navbar-nav .nav-link:hover {
